.antlr/IsiLangParser.java
// Generated from /mnt/c/Users/gabri/Documents/ufabc/ProjetoCompiladores/IsiLang.g4 by ANTLR 4.9.2

	import br.com.professorisidro.isilanguage.datastructures.IsiSymbol;
	import br.com.professorisidro.isilanguage.datastructures.IsiVariable;
	import br.com.professorisidro.isilanguage.datastructures.IsiSymbolTable;
	import br.com.professorisidro.isilanguage.exceptions.SemanticException;
	import br.com.professorisidro.isilanguage.ast.*;
	import java.util.ArrayList;
	import java.util.Stack;
  import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IsiLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, SC=15, OPSUM=16, OPSUB=17, 
		OPMULT=18, OPDIV=19, OPA=20, CPA=21, COLON=22, OP=23, ATTR=24, COMMA=25, 
		OBR=26, CBR=27, OPREL=28, ID=29, DOUBLE=30, INT=31, STRING=32, WS=33;
	public static final int
		RULE_prog = 0, RULE_varDeclaration = 1, RULE_type = 2, RULE_block = 3, 
		RULE_cmd = 4, RULE_readCommand = 5, RULE_writeCommand = 6, RULE_attribCommand = 7, 
		RULE_conditionalCommand = 8, RULE_whileCommand = 9, RULE_caseCommand = 10, 
		RULE_expr = 11, RULE_expr_ = 12, RULE_term = 13, RULE_term_ = 14, RULE_factor = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "varDeclaration", "type", "block", "cmd", "readCommand", "writeCommand", 
			"attribCommand", "conditionalCommand", "whileCommand", "caseCommand", 
			"expr", "expr_", "term", "term_", "factor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'fimprog.'", "'int'", "'double'", "'string'", "'leia'", 
			"'escreva'", "'se'", "'senao'", "'enquanto'", "'escolha'", "'quando'", 
			"'pare'", "'padrao'", "';'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", 
			"':'", null, "'='", "','", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "SC", "OPSUM", "OPSUB", "OPMULT", "OPDIV", "OPA", "CPA", 
			"COLON", "OP", "ATTR", "COMMA", "OBR", "CBR", "OPREL", "ID", "DOUBLE", 
			"INT", "STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IsiLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private int _type;
		private String _varName;
		private String _varValue;
		private IsiSymbolTable symbolTable = new IsiSymbolTable();
		private IsiSymbol symbol;
		private IsiProgram program = new IsiProgram();
		private ArrayList<AbstractCommand> currentThread;
		private Stack<ArrayList<AbstractCommand>> stack = new Stack<ArrayList<AbstractCommand>>();
		private String _readID;
		private String _writeID;
		private String _exprID;
		private String _exprContent;
		private String _conditionalExpr;
	  private String _whileExpr;
	  private String _caseExpr;
	  private ArrayList<AbstractCommand> _caseDefault;
	  private HashMap<String, ArrayList<AbstractCommand>> _caseCommands = new HashMap<String, ArrayList<AbstractCommand>>();
	  private String _caseCondition;
		private ArrayList<AbstractCommand> trueList;
		private ArrayList<AbstractCommand> falseList;
	  private ArrayList<AbstractCommand> whileList;
	  private ArrayList<AbstractCommand> caseList;
	  private static final String ANSI_YELLOW = "\u001B[33m";
	  private static final String ANSI_RED = "\u001B[31m	";
	  private static final String ANSI_RESET = "\u001B[0m";

		public void verificaID(String id){
			if (!symbolTable.exists(id)){
				throw new SemanticException("Symbol " + id + " not declared");
			}
		}

		public void showCommands(){
			for (AbstractCommand c: program.getCommands()){
				System.out.println(c);
			}
		}

		public void generateJavaCode(){
			program.generateJavaTarget();
		}

	  public void generateRubyCode() {
	    program.generateRubyTarget();
	  }

	  public void checkTypeComp(String id, int targetType) {
	    IsiVariable var = (IsiVariable) symbolTable.get(id);

	    if (var.getType() != targetType) {
	      throw new SemanticException("TypeMismatchError for " + id + ". Expected: " + typeMapper(var.getType()) + ", " + "get: " + typeMapper(targetType));
	    }
	  }

	  public String typeMapper(int target) {
	    if (target == 0) {
	      return "int";
	    } else if(target == 1) {
	      return "double";
	    } else {
	      return "string";
	    }
	  }

	  public void checkSwitchType(String id) {
	    IsiVariable var = (IsiVariable) symbolTable.get(id);

	    if (var.getType() == IsiVariable.DOUBLE) {
	      throw new SemanticException("Cannot switch with double.");
	    }
	  }

	  public void checkCaseType(int targetType, String condition) {
	    boolean isInt = condition.matches("[0-9]*");
	    boolean isString = condition.matches(".*[a-zA-Z].");

	    if(!isInt && targetType == IsiVariable.INT) {
	      throw new SemanticException("Case type must be equals to switch.");
	    } else if(!isString && targetType == IsiVariable.STRING) {
	      throw new SemanticException("Case type must be equals to switch.");
	    }
	  }

	  public void checkUnused() {
	    ArrayList<IsiSymbol> unnused = symbolTable.getAllNotUsed();
	    for(IsiSymbol symbol: unnused) {
	      System.out.println(ANSI_YELLOW + "WARNING: Variable " + symbol.getName() + " declared but never used!" + ANSI_RESET);
	    }
	  }

	public IsiLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(T__0);
			setState(34); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(33);
				varDeclaration();
				}
				}
				setState(36); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4))) != 0) );
			setState(38);
			block();
			setState(39);
			match(T__1);

			    checkUnused();
			    program.setVarTable(symbolTable);
			    program.setCommands(stack.pop());

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(IsiLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(IsiLangParser.ID, i);
		}
		public TerminalNode SC() { return getToken(IsiLangParser.SC, 0); }
		public List<TerminalNode> COMMA() { return getTokens(IsiLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(IsiLangParser.COMMA, i);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			type();
			setState(43);
			match(ID);

			    _varName = _input.LT(-1).getText();
			    _varValue = null;
			    symbol = new IsiVariable(_varName, _type, _varValue);
			    if (!symbolTable.exists(_varName)){
			      symbolTable.add(symbol);
			    }
			    else{
			      throw new SemanticException("Symbol " + _varName + " already declared");
			    }
			  
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(45);
				match(COMMA);
				setState(46);
				match(ID);

				      _varName = _input.LT(-1).getText();
				      _varValue = null;
				      symbol = new IsiVariable(_varName, _type, _varValue);
				      if (!symbolTable.exists(_varName)){
				          symbolTable.add(symbol);
				      }
				      else{
				        throw new SemanticException("Symbol " + _varName + " already declared");
				      }
				    
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				match(T__2);
				 _type = IsiVariable.INT;  
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(T__3);
				 _type = IsiVariable.DOUBLE; 
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				match(T__4);
				 _type = IsiVariable.STRING;  
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    currentThread = new ArrayList<AbstractCommand>();
				  stack.push(currentThread);
			  
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				cmd();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public ReadCommandContext readCommand() {
			return getRuleContext(ReadCommandContext.class,0);
		}
		public WriteCommandContext writeCommand() {
			return getRuleContext(WriteCommandContext.class,0);
		}
		public AttribCommandContext attribCommand() {
			return getRuleContext(AttribCommandContext.class,0);
		}
		public ConditionalCommandContext conditionalCommand() {
			return getRuleContext(ConditionalCommandContext.class,0);
		}
		public WhileCommandContext whileCommand() {
			return getRuleContext(WhileCommandContext.class,0);
		}
		public CaseCommandContext caseCommand() {
			return getRuleContext(CaseCommandContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cmd);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				readCommand();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				writeCommand();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				attribCommand();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 4);
				{
				setState(72);
				conditionalCommand();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 5);
				{
				setState(73);
				whileCommand();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 6);
				{
				setState(74);
				caseCommand();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadCommandContext extends ParserRuleContext {
		public TerminalNode OPA() { return getToken(IsiLangParser.OPA, 0); }
		public TerminalNode ID() { return getToken(IsiLangParser.ID, 0); }
		public TerminalNode CPA() { return getToken(IsiLangParser.CPA, 0); }
		public TerminalNode SC() { return getToken(IsiLangParser.SC, 0); }
		public ReadCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readCommand; }
	}

	public final ReadCommandContext readCommand() throws RecognitionException {
		ReadCommandContext _localctx = new ReadCommandContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_readCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__5);
			setState(78);
			match(OPA);
			setState(79);
			match(ID);

			    verificaID(_input.LT(-1).getText());
			    _readID = _input.LT(-1).getText();
			  
			setState(81);
			match(CPA);
			setState(82);
			match(SC);

			    IsiVariable var = (IsiVariable)symbolTable.get(_readID);
			    ReadCommand cmd = new ReadCommand(_readID, var);
			    stack.peek().add(cmd);
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteCommandContext extends ParserRuleContext {
		public TerminalNode OPA() { return getToken(IsiLangParser.OPA, 0); }
		public TerminalNode CPA() { return getToken(IsiLangParser.CPA, 0); }
		public TerminalNode SC() { return getToken(IsiLangParser.SC, 0); }
		public TerminalNode ID() { return getToken(IsiLangParser.ID, 0); }
		public TerminalNode INT() { return getToken(IsiLangParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(IsiLangParser.DOUBLE, 0); }
		public TerminalNode STRING() { return getToken(IsiLangParser.STRING, 0); }
		public WriteCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_writeCommand; }
	}

	public final WriteCommandContext writeCommand() throws RecognitionException {
		WriteCommandContext _localctx = new WriteCommandContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_writeCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__6);
			setState(86);
			match(OPA);
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(87);
				match(ID);

				      verificaID(_input.LT(-1).getText());
					     _writeID = _input.LT(-1).getText();
				    
				}
				break;
			case INT:
				{
				setState(89);
				match(INT);
				_writeID = _input.LT(-1).getText();
				}
				break;
			case DOUBLE:
				{
				setState(91);
				match(DOUBLE);
				_writeID = _input.LT(-1).getText();
				}
				break;
			case STRING:
				{
				setState(93);
				match(STRING);
				_writeID = _input.LT(-1).getText();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(97);
			match(CPA);
			setState(98);
			match(SC);

			    WriteCommand cmd = new WriteCommand(_writeID);
			    stack.peek().add(cmd);
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttribCommandContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IsiLangParser.ID, 0); }
		public TerminalNode ATTR() { return getToken(IsiLangParser.ATTR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SC() { return getToken(IsiLangParser.SC, 0); }
		public AttribCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribCommand; }
	}

	public final AttribCommandContext attribCommand() throws RecognitionException {
		AttribCommandContext _localctx = new AttribCommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attribCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(ID);

			    verificaID(_input.LT(-1).getText());
			    _exprID = _input.LT(-1).getText();
			  
			setState(103);
			match(ATTR);

			    _exprContent = "";
			  
			setState(105);
			expr();
			setState(106);
			match(SC);

			    AssignmentCommand cmd = new AssignmentCommand(_exprID, _exprContent);
			    stack.peek().add(cmd);
			    IsiVariable var = (IsiVariable) symbolTable.get(_exprID);
			    var.setValue(_exprContent);
			    symbolTable.get(_exprID).setUsed();
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalCommandContext extends ParserRuleContext {
		public TerminalNode OPA() { return getToken(IsiLangParser.OPA, 0); }
		public TerminalNode OPREL() { return getToken(IsiLangParser.OPREL, 0); }
		public TerminalNode CPA() { return getToken(IsiLangParser.CPA, 0); }
		public List<TerminalNode> OBR() { return getTokens(IsiLangParser.OBR); }
		public TerminalNode OBR(int i) {
			return getToken(IsiLangParser.OBR, i);
		}
		public List<TerminalNode> CBR() { return getTokens(IsiLangParser.CBR); }
		public TerminalNode CBR(int i) {
			return getToken(IsiLangParser.CBR, i);
		}
		public List<TerminalNode> ID() { return getTokens(IsiLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(IsiLangParser.ID, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public ConditionalCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalCommand; }
	}

	public final ConditionalCommandContext conditionalCommand() throws RecognitionException {
		ConditionalCommandContext _localctx = new ConditionalCommandContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_conditionalCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T__7);
			setState(110);
			match(OPA);
			{
			setState(111);
			match(ID);
			}

			    _conditionalExpr = _input.LT(-1).getText();
			  
			setState(113);
			match(OPREL);

			    _conditionalExpr += _input.LT(-1).getText();
				
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(115);
				match(ID);
				}
				break;
			case 2:
				{
				setState(116);
				expr();
				}
				break;
			}

			    _conditionalExpr += _input.LT(-1).getText();
			  
			setState(120);
			match(CPA);
			setState(121);
			match(OBR);

			    currentThread = new ArrayList<AbstractCommand>();
			    stack.push(currentThread);
			  
			setState(124); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(123);
				cmd();
				}
				}
				setState(126); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << ID))) != 0) );
			setState(128);
			match(CBR);

			    trueList = stack.pop();
			  
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(130);
				match(T__8);
				setState(131);
				match(OBR);
